Création de la table de synthèse des requis par utilisation du sol

--- a/2025_PaulCharbonneau_Memoire_MSc.tex
+++ b/2025_PaulCharbonneau_Memoire_MSc.tex
@@ -64,7 +64,7 @@
 \usepackage{flafter,placeins}
 %%
 %% Autres modules. / Other packages.
-\usepackage{amsmath,color,soulutf8,longtable,colortbl,setspace,xspace,url,pdflscape,amsthm,multirow,rotating,neuralnetwork,tikz,makecell}
+\usepackage{amsmath,color,soulutf8,longtable,colortbl,setspace,xspace,url,pdflscape,amsthm,multirow,rotating,neuralnetwork,tikz,makecell,bbding,xcolor,array,pgfplots,pgfplotstable}
 \usetikzlibrary{fadings}
 \usetikzlibrary{decorations.pathreplacing}
 \usepackage{sidecap}
