Modifications post Catherine: État idéal final dans l'introduction. Encore à faire: Mieux positionner dans l'introduction

--- a/5-Introduction.tex
+++ b/5-Introduction.tex
@@ -70,6 +70,43 @@ L'accès à ces données ainsi que leur complétude est ici un enjeu, du fait de
 \subsection{Enjeux}
 
 \textcite{Bourdeau:MethodologieAnalyse:2014} mentionne les enjeux reliés à la provision de stationnement et ses effets sur la mobilité. À cela s'ajoutent trois formes d'arbitrage; une dimension spatiale entre différentes formes de mobilités qui sont en compétition pour un espace limité, particulièrement dans les milieux urbains denses avec un cadre bâti patrimonial et des besoins croissants sur ce même espace ; la deuxième est politique où l'offre de stationnement est devenue un enjeu de taille pour beaucoup de ménages, sans réellement que le débat ne soit cadré par des données ; le troisième est économique où la provision de stationnement par mandat gouvernemental réduit la viabilité financière de projets de construction du fait de la quantité de terre et de construction supplémentaire imposée par ces mandats. De plus, des coûts supplémentaires pour les infrastructures routières qui doivent contourner ces stationnements \og{spatio-phage} \fg{} ainsi que la dillution de la base foncière pour financer cette infrastructure sont une double pénalité pour les finances des municipalités. 
+%%% 
+% ETAT FINAL DESIRE
+%%%%%
+
+
+\section{L'outil d'analyse du stationnement idéal}
+Cette section va décrire une méthodologie d'analyse qui pourrait être utilisé par un praticien pour évaluer le stationnement, ces effets sur la mobilité et les externalités qui y sont reliés. Deux grands types d'analyses sont possible: un diagnostic de la situation actuelle et l'évaluation de changements de politique sur la mobilité des personnes et des marchandises ainsi que les externalités qui y sont reliées. Ce mémoire n'a pas pour but de faire l'ensemble de l'analyse mais cette section veut établir un cadre d'analyse global et illustrer les chainons manquants actuels et où il contribuera à cet ensemble global.
+    \subsection{Indicateurs pertinents}
+
+    \subsection{Diagnostique de l'état actuel}
+        \subsubsection{Étapes du diagnostic}
+        \subsubsection{Évaluation de l'offre}
+    \paragraph{Estimation de l'offre sur rue}
+    \paragraph{Analyse de la règlementation passée}
+    \paragraph{Estimation de la capacité par méthode règlementaire}
+    \paragraph{Estimation de la capacité par inventaire direct}
+    \paragraph{Estimation de la capacité par imagerie satellite}
+    \paragraph{Consolidation d'une estimation de capacité à partir des différentes méthodes d'estimation}
+        \subsubsection{Évaluation de la demande}
+    \paragraph{Estimation de la demande à partir des enquêtes OD}
+    \paragraph{Comptage manuel de véhicule sur le terrain}
+    \paragraph{Comptage automatisé des véhicules}
+      \subparagraph{Comptage par caméra sur véhicule gouvernemental}
+      \subparagraph{Comptage analyse d'image aéroportée}
+      \subparagraph{Comptage à partir de caméra de sécurité}
+      \subparagraph{Ajout de capteurs aux places de stationnement}
+        \subsubsection{Évaluation de l'utilisation de la capacité}
+        \subsubsection{Influence de l'utilisation de la capacité sur la mobilité des personnes}
+        \subsubsection{Évaluation des coûts de remplacement et d'opportunité de l'état actuel}
+        \subsubsection{Diagramme de la procédure de diagnostique}
+    \subsection{Évaluation de politiques futures}
+        \subsubsection{Élaboration de scénarios}
+        \subsubsection{Évaluation de l'effet des scénarios sur l'offre de stationnement}
+        \subsubsection{Évaluation de la variation de l'offre sur la mobilité des personnes}
+        \subsubsection{Évaluation des indicateurs de la mobilité sur l'effet}
+        \subsubsection{Diagramme de la méthodologie d'analyse}
+
 
 %%
 %% OBJECTIFS DE RECHERCHE / RESEARCH OBJECTIVES
