Rédaction continuée sur la base de données de règlements de stationnement

--- a/5-Introduction.tex
+++ b/5-Introduction.tex
@@ -69,7 +69,7 @@ L'accès à ces données ainsi que leur complétude est ici un enjeu, du fait de
 
 \subsection{Enjeux}
 
-\textcite{Bourdeau:MethodologieAnalyse:2014} mentionne les enjeux reliés à la provision de stationnement et ses effets sur la mobilité. À cela s'ajoutent trois formes d'arbitrage; une dimension spatiale entre différentes formes de mobilités qui sont en compétition pour un espace limité, particulièrement dans les milieux urbains denses avec un cadre bâti patrimonial et des besoins croissants sur ce même espace ; la deuxième est politique où l'offre de stationnement est devenue un enjeu de taille pour beaucoup de ménages, sans réellement que le débat ne soit cadré par des données ; le troisième est économique où la provision de stationnement par mandat gouvernemental réduit la viabilité financière de projets de construction du fait de la quantité de terre et de construction supplémentaire imposée par ces mandats. De plus, des coûts supplémentaires pour les infrastructures routières qui doivent contourner ces stationnements \og{spatio-phage} \fg{} ainsi que la dillution de la base foncière pour financer cette infrastructure sont une double pénalité pour les finances des municipalités. 
+\textcite{Bourdeau:MethodologieAnalyse:2014} mentionne les enjeux reliés à la provision de  stationnement et ses effets sur la mobilité. À cela s'ajoutent trois formes d'arbitrage; une dimension spatiale entre différentes formes de mobilités qui sont en compétition pour un espace limité, particulièrement dans les milieux urbains denses avec un cadre bâti patrimonial et des besoins croissants sur ce même espace ; la deuxième est politique où l'offre de stationnement est devenue un enjeu de taille pour beaucoup de ménages, sans réellement que le débat ne soit cadré par des données ; le troisième est économique où la provision de stationnement par mandat gouvernemental réduit la viabilité financière de projets de construction du fait de la quantité de terre et de construction supplémentaire imposée par ces mandats. De plus, des coûts supplémentaires pour les infrastructures routières qui doivent contourner ces stationnements \og{spatio-phage} \fg{} ainsi que la dilution de la base foncière pour financer cette infrastructure sont une double pénalité pour les finances des municipalités. 
 %%% 
 % ETAT FINAL DESIRE
 %%%%%
