--- a/7-1-Details_Solution.tex
+++ b/7-1-Details_Solution.tex
@@ -22,8 +22,6 @@ La section méthodologique sera divisée en trois sections. La première présen
         \caption{Géobases pour le territoire de la ville de Québec}
         \label{tab:donnees_disponibles_Québec}
         \endlastfoot
-        
-        
         vdq-panneaux stationnement    & Points        & Panneaux de stationnement sur rue          & Ville de Québec / Données Québec  & 5 mai 2024 \\
         \hline
         vq\_quartiers & Polygones & SIG des quartiers de la ville de Québec & Ville de Québec / Données Québec & 5 mai 2024 \\
@@ -124,7 +122,8 @@ La section méthodologique sera divisée en trois sections. La première présen
   \subsection{Imagerie Aérienne}
   \subsection{Rôle Foncier}
   \subsection{Recensement}
-\section{Traitement des données}
+  
+\section{Méthode d'inventaire sur rue}
   \subsection{Prétraitement des données}
     \subsubsection{Panneaux de stationnement}
       \subsubsection{Lisibilité Machine}
@@ -196,6 +195,229 @@ La section méthodologique sera divisée en trois sections. La première présen
     \subsubsection{Bords de rue}
     \subsubsection{Imagerie aérienne}
   \subsection{Conversion à une capacité de stationnement temporellement et spatiallement définie}
+\section{Méthode d'inventaire hors rue}
+    \subsection{Usages envisagés pour l'inventaire de stationnement}
+    Plusieurs usages sont envisagés pour la base de données de stationnement. Il est important de les expliciter puisque cela sera la base pour l'établissement de requis pour la structure des données. Les usages envisagés sont donc les suivants:
+    \begin{itemize}
+        \item Étude d'accessibilité d'une place de stationnement à un lieu donnée (requiert que les places soient explicitées individuellement)
+        \item Estimation du nombre de places de stationnement pour une destination précise
+        \item Estimation du nombre de places de stationnement dans une zone d'analyse
+        \item Analyse économétrique de l'effet de la tarification ou de la variation de l'offre sur les comportements de mobilité.
+        \item Estimation de la surface minéralisée pour l'entreposage des voitures pour l'application d'éco-fiscalité   
+    \end{itemize}
+    Basé sur ces cas d'usage envisagés, la situation idéale serait d'avoir une base de données complètement désagrégée qui liste chaque place de stationnement. A minima, l'information doit être disponible au niveau du lot cadastral. D'autre part, il doit être possible d'encoder les informations relatives à la tarification de l'espace, le nombre disponible par lot cadastral, pour permettre d'appliquer des mesures d'éco-fiscalité. Il doit être possible d'agréger ces mesures au niveau à des zones d'analyse de déplacement pour faire des analyses sur la capacité de stationnement dans une zone dans un modèle de transport. \par
+    Ultimement, l'ensemble de ces requis soulève la nécessite d'une base de donnée personnalisée. En effet, dans le cas d'un inventaire basé sur la réglementation, \ac{OSM} est mal adapté puisqu'il requiert la localisation précise des places ce qui n'est pas nécessairement faisable. D'autre part, cela ne lie pas le stationnement à un identifiant qui permet à une entité gouvernemental d'appliquer cette fiscalité. Idéalement, la base de données serait capable d'exporter un format importable dans \ac{OSM} pour mettre à jour les données ouvertes au public.
+    \subsection{Choix d'une unité d'inventaire}
+    Idéalement, il serait possible d'avoir la localisation précise de chaque place de stationnement. Cela permettrait de déterminer l'accessibilité aux destinations pour divers niveaux d'achalandage et choix de stationnement. Il est aussi nécessaire que les places soient agrégés par lot cadastral pour que les municipalités puisse appliquer des mesures d'éco-fiscalité et distribuer les places de stationnement aux divers comptes de taxe sur un même lot. Finalement, l'utilisation du lot cadastral est pertinente comme unité d'agrégation puisque qu'elle se prête bien à un inventaire basé sur la règlementation
+    \subsection{Proposition de base de données}
+    La figure \ref{fig:offstreet_db_erd} montre la structure de la base de données utilisée pour l'estimation de l'offre de stationnement. 
+    \begin{landscape}
+    \begin{figure}
+        \centering
+        \includegraphics[width = 0.85\linewidth]{images/structure_base_de_donnee.png}
+        \caption{Diagramme entité association de la base de données}\label{fig:offstreet_db_erd}
+    \end{figure}
+    \end{landscape}
+    La base de données est implémentée dans PostgreSQL avec PostGIS pour pouvoir gérer les données spatiales du rôle foncier, du cadastre ainsi que de la division géopolitique du territoire.\par
+    
+    \subsubsection{Données sortantes}
+    La table \underline{inventaire\_stationnement} contient l'inventaire de stationnement. La table laisse la possibilité d'avoir plusieurs estimés par lot cadastral. Ainsi, l'usager peut utiliser un estimé réglementaire, entrer une valeur manuellement ou utiliser une méthode d'estimation orthophoto. D'autre part, un identifiant de clientèle et de tarif sont mis en place. On pourrait ainsi avoir un cas où sur un même lot cadastral il y a plusieurs stationnement (par exemple, employés, résidents, clients de commerces) ayant des modalités d'accès différentes. Chaque stationnement aurait alors un identifiant de clientèle et un identifiant de tarif. Une clé primaire est mise en place pour chaque stationnement sous la forme de la colonne id\_inventaire. Le champs id\_reg\_estime permet d'identifier le règlement d'urbanisme utilisé pour définir l'offre de stationnement estimée basé sur les règlements d'urbanisme. Cette valeur correspond à id\_reg\_stat dans la table entete\_reg\_stationnement qui sera présentée à la prochaine section.\par
+    La table \underline{entete\_tarifs} est la table contenant une description et une clé primaire d'identifiant de tarifs vers laquelle pointe la table inventaire. La table \underline{association\_tarifs} joint une période tarifaire, un tarif et l'identifiant de tarif. La table \underline{periode\_tarifaire} permettre de définir des périodes de validité. Chaque période tarifaire a un identifiant unique, un identifiant de jours, une heure de début et une heure de fin. \par
+    Les tarifs ont chacun un entête avec un identifiant et une description entreposés dans la table \underline{entete\_couts\_tarifs}. La table \underline{couts\_tarifaires} contient les données de tarification. La structure a été ainsi faite pour permettre plusieurs types de tarification en fonction de l'heure de la journée et une progression de la tarification. Les champs de la table sont type\_couts qui définit s'il s'agit d'un abonnement un paiement à l'entrée ou un paiement en sortie. Le champs seuil\_temps et unite\_seuil définissent un seuil au delà duquel le tarif s'applique. Les champs ordonnee\_origine, pente\_tarif, unite\_tarif définissent l'ordonnée à l'origine, la pente et l'unité à fournir entrée pour obtenir le prix du stationnement.\par
+    Pour conclure, la table \underline{clienteles\_hors\_rue} définit l'association entre le type de clientèle et l'entier enregistré dans la table \underline{inventaire\_stationnement}. Les valeurs possibles envisagées sont listées au tableau \ref{tab:clienteles_hors_rue}.
+    \begin{table}
+    \centering
+    \begin{tabular}{l l}
+    \hline
+    id\_clientèle & Description clientèle\\ \hline
+    0& Automobiles - Propriétaire et Visiteurs Autorisés \\
+    1 & Automobiles - Propriétaires Seulement \\
+    2 & Automobiles - Clients \\
+    3 & Automobiles - Employés seulement \\
+    4 & Automobiles - Véhicules autorisés \\
+    5 & Automobiles - Vignettes résidents \\
+    6 & Automobiles - Vignettes Autres \\
+    7 & Automobiles - Tous\\ \hline
+    \end{tabular}
+    \caption{Entrées dans la table \underline{clienteles\_hors\_rue}}\label{tab:clienteles_hors_rue}
+    \end{table}
+    \FloatBarrier
+    La figure \ref{fig:offstreet_db_erd_output} montre le détail de la base de donnée discutée dans cette section. Cette structure permet de séparer les places disponibles aux différentes clientèles de manière extensible pour chaque lot et de répertorier des structures de tarification complexe au besoin.
+    \begin{figure}[!h]
+        \centering
+        \includegraphics[trim={50cm 48cm 0 0}, clip, width=14cm]{images/structure_base_de_donnee.png}
+        \caption{Structure de données en sortie de procédure de calcul}\label{fig:offstreet_db_erd_output}
+    \end{figure}
+    \FloatBarrier
+
+    \subsubsection{Représentation des limites géopolitiques au travers du temps} 
+    Une composante la méthodologie proposée est d'utiliser les règlements d'urbanisme pour proposée une estimation de la capacité de stationnement basé sur les règlements d'urbanisme. Cette section présentera la manière dont la règlementation est représentée dans la base de données.
+    \paragraph{Historique géopolitique} L'historique géo politique de la ville est représenté au moyen de deux tables: \underline{historique\_geopol} et \underline{cartographie\_secteurs}. \underline{historique\_geopol} représente les grandes périodes où le territoire a été stable. Dans le cadre de ce mémoire, 6 grandes périodes ont été identifiées basé sur \textcite{VilledeQuebec:ReperesChronologique:} et \textcite{ElectionsQuebec:AtlasHistorique:2021}. Elles sont listées au tableau \ref{tab:histo_geopol}
+    \begin{table}
+    \centering
+    \begin{tabular}{c p{5cm} c c}
+    \hline
+    \makecell{Identifiant\\ id\_periode} & \makecell[l]{Nom \\ nom\_periode} & \makecell{Année début \\ date\_debut\_periode} & \makecell{Année fin \\ date\_fin\_periode}\\ \hline
+    1 & Fondation - 1970 &  S.V. & 1970 \\
+    3 & Duberger, Saules et Neufchâtel fusion Québec & 1971 & 1975 \\
+    4 & Fusions Charlesbourg & 1976 & 1994 \\
+    5 & Inauguration VQZ-3 & 1995 & 1996 \\
+    6 & Abrogation Zone Prioritaire Ville de Québec & 1997 & 2009 \\
+    7 & Harmonisation & 2010 & S.V.\\ \hline
+    \end{tabular}
+    \caption{Valeurs dans l'historique géopolitique utilisé dans le cadre de ce mémoire}\label{tab:histo_geopol}
+    \end{table}
+    \FloatBarrier
+    La table \underline{cartographie\_secteurs} contient les délimitations des secteurs pour chacune des périodes. Les champs sont les suivants:id\_periode\_geo est l'identifiant primaire, id\_periode est la clef qui référence à la table \underline{historique\_geopol}, le champs ville contient le nom de la ville, le champs secteur est un nom de secteur, et le champs ville\_sec est une concaténation des deux champs précédents. En plus de l'information tabulaire, les limites géographiques des secteurs sont entreposés dans cette table. \par
+    La figure \ref{fig:offstreet_db_erd_history} montre le détail de la section de base de donnée montrant l'évolution des variations géopolitiques du territoire.
+    \begin{figure}
+        \centering
+        \includegraphics[trim={15cm 55cm 60cm 10cm}, clip, width=8cm]{images/structure_base_de_donnee.png}
+        \caption{Structure de données pour l'historique géopolitique}\label{fig:offstreet_db_erd_history}
+    \end{figure}
+    \FloatBarrier
+    
+    \subsubsection{Représentation de règlements individuels} 
+    Les règlements sont ensuite définis individuellement dans la table \underline{entete\_reg\_stationnement}. Cette table contient les champs suivants: id\_reg\_stat est l'identifiant unique pour chaque règlement, description est une description textuelle issue du règlement décrivant l'usage du sol associé au règlement, annee\_debut\_reg contient la date d'entrée en vigueur du règlement, annee\_fin\_reg contient l'année d'abrogration du règlement, texte\_loi, article\_loi et paragraphe\_loi contiennent la provenance du règlement et ville indique la ville qui a issue le règlement. La description du nombre de places requises est entreposée dans la table \underline{reg\_stat\_empile}. Les champs de la table sont les suivants: id\_reg\_stat\_emp est l'identifiant unique pour la table, id\_reg\_stat permet d'unifier plusieurs lignes de la table à un même règlement. Cette stratégie permet de représenter des règlements complexes sur plusieurs lignes de la base de données. La colonne ss\_ensemble permet de définir des sous-ensembles au règlement, ce champ permet de séparer des conditions complexes.  Le champs seuil définit une borne inférieure à son applicabilité. L'unité pour le seuil est la même que celle utilisée en entrée des équations linéaires définies dans les autres champs de la même ligne. le champs oper contient l'opération à appliquer à la ligne. Toutes les lignes sauf la première devraient avoir une valeur pour ce champs. Les champs cases\_fix\_min et cases\_fix\_max définissent l'abscisse à l'ordonnée, pente\_min et pente\_max définissent la pente, et unite définit l'unité utilisée. Le champs unité et un entier et est la clé primaire pour la table \underline{multiplicateur\_facteurs\_colonnes}. \par 
+    Les opérations possibles sont listées dans la table liste\_operations qui a deux champs: id\_operation et desc\_operation. Les valeurs possibles sont listées au tableau \ref{tab:operations_table}.
+    \begin{table}[h]
+        \centering
+        \begin{tabular}{cl}
+             \hline
+             id\_operation & desc\_operation  \\
+             1 & + (absolu)\\
+             2 & + (au-delà seuil >=)(obsolète)\\
+             3 & ou (plus contraignant) \\
+             4 & changement critère au dela seuil (>=)\\
+             5 & changement critère dans centre commercial(obsolète)\\
+             6 & ou simple \\ \hline
+        \end{tabular}
+        \caption{Opérations listées dans la table liste\_operations}
+        \label{tab:operations_table}
+    \end{table}
+    Cette dernière contient trois 5 champs: id\_unite, colonne\_role\_foncier, facteur\_correction, cubf, desc\_unite. La champs id\_unite est référencée par le champs unite de la table \underline{reg\_stat\_empile}, colonne role foncier donne le nom de la colonne dans le rôle foncier qui doit être utilisée dans l'équation et la comparaison au seuil, la colonne facteur correction donne la possibilité de multiplier la valeur dans la colonne du rôle foncier pour appliquer une correction. Le champs cubf permet de donner un facteur de correction différent pour différents types de \ac{CUBF}. Le champs desc\_unite donne une brève description de l'unité. Le tableau \ref{tab:unite_pertinentes_minimum_stat} donne les le contenu de la table multiplicateur\_facteur\_colonnes.\par
+    \begin{table}[h]
+    \centering
+        \begin{tabular}{c l c c p{3cm}}
+            \hline
+            id\_unite & colonne\_role\_foncier & facteur\_correction & cubf & desc\_unite \\ \hline
+            1 & rl0312a & 1 & S.V. & chambre\\
+            2 & rl0311a & 1 & S.V. & logement \\
+            4 & rl0308a & 1 & S.V. & metre carré d'étage\\
+            5 & S.V. & 1 & S.V. & metre carré bureau\\
+            6 & S.V. & 1 & S.V. & metre carré salle production \\
+            7 & rl0302a & 1 & S.V. & metre carré terrain\\
+            8 & S.V. & 1 & S.V. & siège \\
+            9 & S.V. & 1 & S.V. & poste de travail \\
+            10 &S.V. & 1 & S.V. & salle \\
+            11 & S.V. & 1 & S.V. & lit \\
+            12 & S.V. & 1 & S.V. & personne \\
+            13 & S.V. & 1 & S.V. & employé \\
+            14 & S.V. & 1 & S.V. & étudiant \\
+            15 & S.V. & 1 & S.V. & médecin \\
+            16 & S.V. & 1 & S.V. & quai \\
+            17 & S.V. & 1 & S.V. & voie de service \\
+            18 & S.V. & 1 & S.V. & vert \\
+            19 & S.V. & 1 & S.V. & allee de pratique \\
+            20 & S.V. & 1 & S.V. & plateau sportif \\ \hline
+        \end{tabular}
+        \caption{Unités utilisées pour codifier les codes d'urbanismes}\label{tab:unite_pertinentes_minimum_stat}
+    \end{table}
+    \FloatBarrier
+    Les équations donnent les étapes mathématiques pour une ligne d'un règlement de stationnement sont donc données aux équations \ref{eq:x_entree}, \ref{eq:places_max} et \ref{eq:places_min} si $x_{entree} \geq seuil $.
+    \begin{align}
+        x_{entree} &= role\_foncier[colonne\_role\_foncier] \times facteur\_correction \label{eq:x_entree}\\
+        n_{places,min} &= cases\_fix\_min + pente\_min \times x_{entree} \label{eq:places_min}\\
+        n_{places,max} &= cases\_fix\_max + pente\_max \times x_{entree} \label{eq:places_max}
+    \end{align}
+    
+    \paragraph{Exemple 1: Clinique medicale} Admettons un règlement qui requiert 1 place par salle de consultation  plus une place par employé plus une place par salle de consultation ou une place par 20 mètres carrés, au plus contraignant. Les entrées dans la table reg\_stat\_empile seraient telles que montrées au tableau \ref{tab:ex_reg_stat_clinique}
+    \begin{table}[h]
+        \centering
+        \begin{tabular}{cccccccccc}
+            \hline
+            \rotatebox{90}{id\_emp} & \rotatebox{90}{id\_reg\_stat} & \rotatebox{90}{ss\_ensemble} & \rotatebox{90}{seuil}  & \rotatebox{90}{oper}  & \rotatebox{90}{cases\_fix\_min}   & \rotatebox{90}{cases\_fix\_max}   & \rotatebox{90}{pente\_min}    & \rotatebox{90}{pente\_max} & \rotatebox{90}{unite}    \\ \hline
+            1                       & 1                             &  1                           & 0                      &  S.V.                 & 0                                 & S.V.                              & 1                             & S.V.                       & 15                       \\
+            2                       & 1                             &  1                           & 0                      &  1                    & 0                                 & S.V.                              & 1                             & S.V.                       & 13                       \\
+            3                       & 1                             &  1                           & 0                      &  1                    & 0                                 & S.V.                              & 1                             & S.V.                       & 10                       \\
+            4                       & 1                             &  2                           & 0                      &  3                    & 0                                 & S.V.                              & 0.05                          & S.V.                       & 4                       \\ \hline
+        \end{tabular}
+        \caption{Exemple règlements dans la table reg\_stat\_empile pour une clinique médicale}
+        \label{tab:ex_reg_stat_clinique}
+    \end{table}
+    \paragraph{Exemple 2: Logements} Dans le cas d'un logement, les règlements changes souvent en fonction du nombre de logements au sein d'un même bâtiment. Dans ce cas hypothétique, le requis serait de une case par logement pour des bâtiments de moins de 4 logements, 1.5 cases par logement pour les bâtiments entre 4 et 7 logement et 1.25 cases par logements pour tout bâtiment de 8 logements ou plus. Dans ce cas, les entrées à la table seraient tels que montrées au tableau
+    \begin{table}[h]
+        \centering
+        \begin{tabular}{cccccccccc}
+            \hline
+            \rotatebox{90}{id\_emp} & \rotatebox{90}{id\_reg\_stat} & \rotatebox{90}{ss\_ensemble} & \rotatebox{90}{seuil}  & \rotatebox{90}{oper}  & \rotatebox{90}{cases\_fix\_min}   & \rotatebox{90}{cases\_fix\_max}   & \rotatebox{90}{pente\_min}    & \rotatebox{90}{pente\_max} & \rotatebox{90}{unite}    \\ \hline
+            5                       & 2                             &  1                           & 0                      &  S.V.                 & 0                                 & S.V.                              & 1                             & S.V.                       & 2                       \\
+            6                       & 2                             &  1                           & 4                      &  4                    & 0                                 & S.V.                              & 1.5                           & S.V.                       & 2                       \\
+            7                       & 2                             &  1                           & 5                      &  4                    & 0                                 & S.V.                              & 1.25                          & S.V.                       & 2                       \\ \hline
+        \end{tabular}
+        \caption{Exemple règlements dans la table reg\_stat\_empile pour le logement}
+        \label{tab:ex_reg_logement}
+    \end{table}
+    \FloatBarrier
+    \paragraph{Exemple 3: Lieux d'assemblée} Dans le cas de lieux d'assemblée, les requis peuvent être exprimés en fonction du nombre de sièges ou en fonction de l'espace au sol. Dans notre cas hypothétique, le requis serait un minimum d'une place par 7 sièges jusqu'à 800 sièges et d'un minimum de 1 place par 9 sièges pour toute place au delà de 800 siège. Un maximum  d'une place par 5 sièges est applicable au-delà de 500 sièges. Alternativement, au cas où il n'y a pas de siège, un requis d'une places par 10 mètres carrés est applicable sans maximum.
+    \begin{table}[h]
+        \centering
+        \begin{tabular}{cccccccccc}
+            \hline
+            \rotatebox{90}{id\_emp} & \rotatebox{90}{id\_reg\_stat} & \rotatebox{90}{ss\_ensemble} & \rotatebox{90}{seuil}  & \rotatebox{90}{oper}  & \rotatebox{90}{cases\_fix\_min}   & \rotatebox{90}{cases\_fix\_max}   & \rotatebox{90}{pente\_min}    & \rotatebox{90}{pente\_max} & \rotatebox{90}{unite}    \\ \hline
+            8                       & 3                             &  1                           & 0                      &  S.V.                 & 0                                 & S.V.                              & 0.142857                      & S.V.                       & 8                       \\
+            9                       & 3                             &  1                           & 500                    &  4                    & 0                                 & 0                                 & 0.142857                      & 0.2                        & 8                       \\
+            10                      & 3                             &  1                           & 800                    &  4                    & 25.396825                         & 0                                 & 0.111111                      & 0.2                        & 8                       \\
+            11                      & 3                             &  2                           & 0                      &  6                    & 0                                 & S.V.                              & 0.1                           & S.V.                       & 4                       \\\hline
+        \end{tabular}
+        \caption{Exemple règlements dans la table reg\_stat\_empile pour un lieu d'assemblée}
+        \label{tab:ex_reg_lieu_assemblee}
+    \end{table}
+    \FloatBarrier
+    \paragraph{Schéma relationnel de la base de données}
+    Une fois l'ensemble de le règlementation défini le schéma relationnel des règlements bruts est montré à la figure \ref{fig:offstreet_db_erd_park_mins_reg_raw}
+    \begin{figure}[h]
+        \centering
+        \includegraphics[trim={15cm 15cm 40cm 42.5cm},clip,width=12.5cm]{images/structure_base_de_donnee.png}
+        \caption{Schéma relationnel pour la définition de règlements d'urbanisme individuels}
+        \label{fig:offstreet_db_erd_park_mins_reg_raw}
+    \end{figure}
+    \FloatBarrier
+    \subsubsection{Création d'ensembles de règlements}
+    Du fait de la variation de la réglementation dans le temps, des règlements instaurés à différent moments peuvent être applicables à une même période. Pour permettre de créer un tout cohérent représentant l'état de la réglementation à un instant T à un endroit sur le territoire de l'actuelle ville de Québec. Cette section va introduire le schéma relationnel de ces ensembles de règlements. Trois tables sont crées pour assurer l'expansibilité du système: \underline{ensembles\_reglements\_stat}, \underline{cubf}, \underline{association\_er\_reg\_stat}.\par
+    \underline{ensembles\_reglements\_stat} a 4 colonnes: id\_er est un identifiant unique pour chaque ensemble de règlements, description\_er est une description textuelle de chaque ensemble de règlements, date\_debut\_er et date\_fin\_er décrivent les années de validité de l'ensemble de règlement.\par
+    \underline{cubf} contient le numéro et la description de chaque \acf{CUBF}.\par
+    \underline{association\_er\_reg\_stat} permet de faire l'association entre les \ac{CUBF}, les ensembles de règlements et les règlements décrits à la section précédente. Cette table est constituée de 4 colonnes: id\_er qui est l'indice de l'ensemble de règlements pour lequel on fait l'association, cubf qui dit pour quelle utilisation du territoire on assigne un règlement de stationnement, id\_reg\_stat qui indique quel règlement défini à la section précédente on associe au cubf et id\_assoc\_er\_reg qui est la clé primaire de la table.\par
+    La figure \ref{fig:offstreet_db_erd_rulesets} montre les tables de la base de données qui permettent de définir un ensemble de règlements.
+    \begin{figure}[h]
+        \centering
+        \includegraphics[trim={15cm 37.5cm 55cm 22.5cm},clip,width=12.5cm]{images/structure_base_de_donnee.png}
+        \caption{Schéma relationnel pour la définition d'ensembles de règlements}
+        \label{fig:offstreet_db_erd_rulesets}
+    \end{figure}
+    \FloatBarrier
+
+    \subsubsection{Association du territoire aux ensembles de règlements}
+    La table \underline{association\_er\_territoire} est nécessaire pour associer les territoires aux ensembles de règlements. Elle comporte trois champs: id\_asso\_er\_ter qui est la cle primaire, id\_er qui fait référence à la clé primaire de \underline{ensembles\_reglements\_stat} et id\_periode\_geo qui fait référence à la clé primaire de \underline{cartographie\_secteurs}. La figure \ref{fig:offstreet_db_erd_er_ter} montre les champs de la table.
+    \begin{figure}[h]
+        \centering
+        \includegraphics[trim={15cm 37.5cm 55cm 25cm},clip,width=12.5cm]{images/structure_base_de_donnee.png}
+        \caption{Schéma relationnel pour l'association des règlements aux territoires}
+        \label{fig:offstreet_db_erd_er_ter}
+    \end{figure}
+    \FloatBarrier
+
+    \subsubsection{Données intrantes}Les données intrantes sont le rôle foncier brut ainsi que le cadastre représentés dans les tables \underline{cadastre} et \underline{role\_foncier}. Inclus dans ces tables sont l'ensemble des champs qui proviennent des données disponibles sur Géo-Index et Données Québec. \par
+    Le cadastre est utilisé pour pouvoir améliorer la cartographie et la représentation des données sur une carte choroplèthe. La table \underline{association\_cadastre\_role} associe le cadastre avec le rôle foncier. En théorie, une jointure géométrique pourrait être complétée mais celle-ci peut être onéreuse et mener à des erreurs pour des lots avec des formes concaves. L'approche faisant l'association dans une table permet de gérer ces formes sans manipulation manuelle une fois une première correction complétée. Ceci est différent de l'approche utilisée par la chaire où les points du cadastre sur l'entrée principale du bâtiment. L'approche proposée ici permet d'utiliser les données brutes du cadastre qui sont issues de \textcite{GouvernementduQuebec:ManuelEvaluation:2024}. Clé primaire pour le cadastre est g\_no\_lot et la clé primaire pour le rôle est l'id\_provinc.\par
+    La figure \ref{fig:offstreet_db_erd_input_data} montre les tables pertinentes en intrant. Il est concevable que ces tables soient entrposés dans un serveur différent si cette méthodologie était implémenté dans un milieu municipal.
+    \begin{figure}
+        \centering
+        \includegraphics[trim={0cm 0cm 80cm 0cm},clip,height=25cm]{images/structure_base_de_donnee.png}
+        \caption{Schéma relationnel pour l'association des règlements aux territoires}
+        \label{fig:offstreet_db_erd_input_data}
+    \end{figure}
+    \FloatBarrier
+    
 \section{Méthode d'analyse}
   \subsection{Analyse spatio temporelle de l'offre de stationnement}
   \subsection{Analyse spatio temporelle de la demande de stationnement}
